--- a/src/cl/larrainvial/carterasAFP/views/CargaCarterasView.mxml
+++ b/src/cl/larrainvial/carterasAFP/views/CargaCarterasView.mxml
@@ -2,6 +2,8 @@
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="2000" height="544" fontSize="14">
 	<mx:Script>
 		<![CDATA[
+			import cl.larrainvial.carterasAFP.events.ImportarEvent;
+			import cl.larrainvial.carterasAFP.events.ProcesoEvent;
 			import cl.larrainvial.carterasAFP.model.ModelLocator;
 			
 			import com.as3xls.xls.ExcelFile;
@@ -9,6 +11,7 @@
 			
 			import mx.controls.Alert;
 			import mx.managers.CursorManager;
+			import mx.managers.PopUpManager;
 			
 			[Bindable]
 			private var model:ModelLocator = ModelLocator.getInstance();
@@ -25,7 +28,7 @@
 			{
 				// TODO Auto-generated method stub
 				var arr:Array = [];
-				arr.push(new FileFilter("Archivos Excel 2003", "*.xls"));
+				arr.push(new FileFilter("Archivos Excel 2003", "*.xlsx"));
 				fileRef = new FileReference();
 				fileRef.addEventListener(Event.SELECT, fileRef_select);
 				//fileRef.addEventListener(Event.COMPLETE, fileRef_complete);
@@ -42,22 +45,21 @@
 			public function onComplete(evt:Event):void 
 			{ 
 				
+				fileRef.removeEventListener(Event.SELECT, fileRef_select);
 				fileRef.removeEventListener(Event.COMPLETE, onComplete);
-				fileRef.addEventListener(Event.COMPLETE, fileRef_complete);
+				fileRef.removeEventListener(IOErrorEvent.IO_ERROR, fileRef_error);
+				var xmlStr: String = "";
+				xmlStr += "<ARCHIVO>";
+				xmlStr += "<DESCRIPCION_ARCHIVO>";
+				xmlStr += "<NOMBRE_ARCHIVO>" + fileRef.name + "</NOMBRE_ARCHIVO>";
+				xmlStr += "<USUARIO>" + model.Loggeado + "</USUARIO>";
+				xmlStr += "</DESCRIPCION_ARCHIVO>";
+				xmlStr += "</ARCHIVO>";
+				var evento: ImportarEvent = new ImportarEvent(xmlStr);
+				evento.callback = fnResult;
+				evento.dispatch()
 		
-				var request:URLRequest = new URLRequest(model.rutaUpload); 
-				try 
-				{ 
-					CursorManager.setBusyCursor();
-					request.contentType = "multipart/form-data";
-					request.method = "POST";
-					fileRef.upload(request, fileRef.name, false); 
-				} 
-				catch (error:Error) 
-				{ 
-					CursorManager.removeBusyCursor();
-					trace("Unable to upload file."); 
-				}
+				
 							
 							
 		 
@@ -66,15 +68,28 @@
 			
 			private function fileRef_select(evt:Event):void 
 			{
-				
-				
-				//if('2016-12-32' == )	
-				
-				fileRef.addEventListener(ProgressEvent.PROGRESS, onProgress); 
-				fileRef.addEventListener(Event.COMPLETE, onComplete); 
-				fileRef.load(); 
-				
-				
+				var arrValNombre:Array = evt.currentTarget.name.split('.')[0].split('_');
+				if(arrValNombre.length == 3){
+					
+					var resultado:String = '';					
+					var reg:RegExp = /20\d{2}(0[1-9]|1[0-2])$/;				
+					var val:* = arrValNombre[2].search(reg);
+					
+					if(arrValNombre[0] == 'Cartera' && arrValNombre[1] == 'Agregada' && val > -1){
+						
+						fileRef.addEventListener(ProgressEvent.PROGRESS, onProgress); 
+						fileRef.addEventListener(Event.COMPLETE, onComplete);			
+						txtNomArchivo.text = fileRef.name;
+					} else {
+						 
+						Alert.show("Nombre del archivo no corresponde, debe ser Cartera_Agregada_[aaaamm].xls, donde aaaamm corresponde a año y mes. Ejemplo de nombre de archivo: “Cartera_Agregada_201801.xlsx”.", "Atención");
+						return;
+					}				
+					
+				} else {
+					Alert.show("Nombre del archivo no corresponde, debe ser Cartera_Agregada_[aaaamm].xls, donde aaaamm corresponde a año y mes. Ejemplo de nombre de archivo: “Cartera_Agregada_201801.xlsx”.", "Atención");
+					return;
+				}
 				
 				
 				
@@ -90,7 +105,7 @@
 			private function importar(): void
 			{
 				var arr:Array = [];
-				arr.push(new FileFilter("Archivos Excel 2003", "*.xls"));
+				arr.push(new FileFilter("Archivos Excel", "*.xlsx"));
 				fileRef = new FileReference();
 				fileRef.addEventListener(Event.SELECT, fileRef_select);
 				//fileRef.addEventListener(Event.COMPLETE, fileRef_complete);
@@ -106,28 +121,13 @@
 				CursorManager.removeBusyCursor();
 			}
 			
-			private function fileRef_complete(evt:Event):void {
-				fileRef.removeEventListener(Event.SELECT, fileRef_select);
-				fileRef.removeEventListener(Event.COMPLETE, fileRef_complete);
-				fileRef.removeEventListener(IOErrorEvent.IO_ERROR, fileRef_error);
-				
-				var xmlStr: String = "";
-				xmlStr += "<ARCHIVO>";
-				xmlStr += "<DESCRIPCION_ARCHIVO>";
-				xmlStr += "<NOMBRE_ARCHIVO>" + fileRef.name + "</NOMBRE_ARCHIVO>";
-				xmlStr += "<USUARIO>" + model.Loggeado + "</USUARIO>";
-				xmlStr += "</DESCRIPCION_ARCHIVO>";
-				xmlStr += "</ARCHIVO>";
-				
-				
-			}
+			
 			
 			
 			private function fileRef_error(evt: IOErrorEvent):void
 			{
 				CursorManager.removeBusyCursor();
 				fileRef.removeEventListener(Event.SELECT, fileRef_select);
-				fileRef.removeEventListener(Event.COMPLETE, fileRef_complete);
 				fileRef.removeEventListener(IOErrorEvent.IO_ERROR, fileRef_error);
 				Alert.show("El archivo no pudo ser subido, \nPor favor reintentar", "Error", Alert.OK, null, null);
 			}
@@ -137,10 +137,42 @@
 			protected function fnCargaArchivo(event:MouseEvent):void
 			{
 				// TODO Auto-generated method stub
-				CursorManager.removeBusyCursor();
-				var event: ImportarEvent = new ImportarEvent(xmlStr);
-				event.callback = fnBuscar;
-				event.dispatch();
+				
+				var request:URLRequest = new URLRequest(model.rutaUpload); 
+				try 
+				{ 
+					CursorManager.setBusyCursor();
+					request.contentType = "multipart/form-data";
+					request.method = "POST";
+					fileRef.upload(request, fileRef.name, false); 
+					
+					CursorManager.removeBusyCursor();
+					
+				} 
+				catch (error:Error) 
+				{ 
+					CursorManager.removeBusyCursor();
+					trace("Unable to upload file."); 
+				}
+				
+				
+				
+				
+				
+			}
+			
+			private function fnResult(param:*):void{
+				var pop:PopIngreso = new PopIngreso();
+				PopUpManager.addPopUp(pop, this.parentApplication as DisplayObject, true);
+				PopUpManager.centerPopUp(pop);
+			}
+			
+			protected function fnEjecutarProceso(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				var ev:ProcesoEvent = new ProcesoEvent();
+				ev.callback = fnResult;
+				ev.dispatch();
 			}
 			
 		]]>
@@ -156,14 +188,14 @@
 			<mx:Label x="250" y="31" text="País"/>
 			<mx:Label x="250" y="71" text="Archivo"/>
 			<mx:ComboBox id="cbPais" horizontalCenter="0" y="29" labelField="label" dataProvider="{model.arrPais}"></mx:ComboBox>
-			<mx:TextInput id="txtNomArchivo" y="69" horizontalCenter="0"/>
+			<mx:TextInput id="txtNomArchivo" y="69" horizontalCenter="0" editable="false" click="fnBuscarArchivo(event)"/>
 			<mx:Button x="599" y="69" label="Examinar" click="fnBuscarArchivo(event)"/>
 			<mx:Button x="705" y="68" label="Cargar Archivo" click="fnCargaArchivo(event)"/>
 		</mx:Canvas>	
 	</mx:HBox>
 	
 	
-	<mx:Button y="120" width="183" height="40" label="Ejecutar Proceso" horizontalCenter="0"/>
+	<mx:Button y="120" width="183" height="40" label="Ejecutar Proceso" horizontalCenter="0" click="fnEjecutarProceso(event)"/>
 	<mx:DataGrid left="10" right="10" top="168" bottom="10">
 		<mx:columns>
 			<mx:DataGridColumn dataField="col1" headerText="Column 1"/>
